--- a/strokes.html
+++ b/strokes.html
@@ -4,7 +4,7 @@
            <title> SPEAKING STROKES </title>
      </head>
   <style>
-       body
+       <body>
           {
             background-color:lavender;
           
@@ -40,3 +40,5 @@
      </ul>
 <hr>
 <a href="https://instagram.com/speaking_.strokes?utm_medium=copy_link"> Explore page </a>
+</body>
+</html>
